fix overflow

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -25,6 +25,7 @@
 .portfolio {
     @extend %island--large;
     margin: 5rem 0;
+    overflow: hidden;
     &::after {
         content: "";
         height: 110%;
